--- a/nde/templates/nde/dataset.html
+++ b/nde/templates/nde/dataset.html
@@ -11,14 +11,19 @@
 </head>
 
 <body>
-    
+
     <button onclick="alertmessage()">ok</button>
     <button onclick="csv()">csv</button>
     <input type='file' id='csvfile' onchange="readFile(this)" />
-    <p id ='a'>missing vals</p>
->
-    <img src="https://www.w3schools.com/html/img_chania.jpg" id ="img" alt="Flowers in Chania" width="460" height="345"/>
-   <script>
+    <p id='a'>missing vals</p>
+    <button onclick="missingValues()">Missing Values</button>
+    <button onclick="correlation()">Correlation</button>
+    <button onclick="missingValuesPlotting()">Missing Values Plotting</button>
+    <button onclick="sampleOfFirstNLastRows()">Sample Of First & Last Rows</button>
+    <button onclick="graphs()">Graphs</button>
+    <img src="https://www.w3schools.com/html/img_chania.jpg" id="img" alt="Flowers in Chania" width="460"
+        height="345" />
+    <script>
         data = "ok";
         function readFile(input) {
             let file = input.files[0];
@@ -26,7 +31,7 @@
             reader.readAsText(file);
             reader.onload = function () {
                 data = reader.result;
-                console.log(reader.result);
+                //console.log(reader.result);
             };
 
         }
@@ -49,14 +54,110 @@
             });
             // console.log(response.text());
             const myJson = await response.json(); //extract JSON from the http response
-            document.getElementById('a').innerHTML=myJson['sample_of_first_n_last_rows']
+            document.getElementById('a').innerHTML = myJson['sample_of_first_n_last_rows']
             var b64Response = btoa(myJson['correlation']);
             document.getElementById('img').src = 'data:image/png;base64,' + b64Response
-            console.log(b64Response)
+            // console.log(b64Response)
             //outputImg.src = 'data:image/png;base64,'+b64Response;
             //alert(myJson['missing_vals'])
             // do something with myJson
 
+        }
+
+    </script>
+
+    <!-- Missing Values -->
+
+    <script>
+        const missingValues = async () => {
+            const response = await fetch('missing_values_api/', {
+                method: 'POST',
+                body: data, // string or object
+                headers: {
+                    'Content-Type': 'text/html'
+                }
+            });
+            response.text().then(function (result) {
+                document.getElementById('a').innerHTML = result;
+                console.log('text call');
+                console.log(result);
+            });
+        }
+    </script>
+
+    <!-- Correlation -->
+
+    <script>
+        const correlation = async () => {
+            const response = await fetch('correlation_api/', {
+                method: 'POST',
+                body: data, // string or object
+                headers: {
+                    'Content-Type': 'image/png'
+                }
+            });
+            
+            response.text().then(function (result) {
+                console.log('data:image/png;base64,'+result)
+                document.getElementById('img').src = 'data:image/png;base64,'+result;
+                
+               });
+
+        }
+    </script>
+
+    <!-- Missing Values Plotting -->
+
+    <script>
+        const missingValuesPlotting = async () => {
+            const response = await fetch('missing_values_plotting_api/', {
+                method: 'POST',
+                body: data, // string or object
+                headers: {
+                    'Content-Type': 'image/png'
+                }
+            });
+            response.text().then(function (result) {
+                document.getElementById('img').src = 'data:image/png;base64,'+result;
+                
+            });
+        }
+    </script>
+
+    <!-- Sample Of First And Last Rows -->
+
+    <script>
+        const sampleOfFirstNLastRows = async () => {
+            const response = await fetch('sample_of_first_n_last_rows_api/', {
+                method: 'POST',
+                body: data, // string or object
+                headers: {
+                    'Content-Type': 'text/html'
+                }
+            });
+            response.text().then(function (result) {
+                document.getElementById('a').innerHTML = result;
+                console.log('text call');
+                console.log(result);
+            });
+        }
+    </script>
+
+
+    <!-- Graphs -->
+
+    <script>
+        const graphs = async () => {
+            const response = await fetch('graphs_api/', {
+                method: 'POST',
+                body: data, // string or object
+                headers: {
+                    'Content-Type': 'image/png'
+                }
+            });
+            response.text().then(function (result) {
+                document.getElementById('img').src = 'data:image/png;base64,'+result;
+            });
         }
     </script>
 
